Revert zoom controls to top-left position to avoid overlap with filter button on mobile; remove related styles from CSS and update development plan.

--- a/css/map-styles.css
+++ b/css/map-styles.css
@@ -49,12 +49,6 @@ html, body {
     color: rgba(153, 204, 255, 0) !important;
 }
 
-/* Reposition and resize zoom controls */
-.ol-zoom {
-    top: .5em;
-    left: .5em;
-}
-
 .ol-zoom button {
     width: 1.75em;
     height: 1.75em;
